--- a/assets/test.html
+++ b/assets/test.html
@@ -5,16 +5,35 @@
     <meta charset="UTF-8">
     <title>Test Heatmap</title>
 
+    <!-- side by side -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+
+    <!-- jquery -->
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="jquery.ui.touch-punch.min.js"></script> 
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="jquery.beforeafter-map-0.11.js"></script>
+
+    <!-- map and d3 -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    
+    <!-- css -->
     <link rel="stylesheet" href="css/style.css" />
+
+
 
   </head>
 
   <body>
 
-    <div id="map"></div>
+    <div id="map">
+      <div id="before" class="map" style="width: 840px; height: 400px"></div>
+      <div id="after" class="map"></div>
+    </div>
 
     <!-- API key -->
     <script type="text/javascript" src="config.js"></script>
