--- a/assets/test.html
+++ b/assets/test.html
@@ -32,7 +32,7 @@
 
     <div id="map">
       <div id="before" class="map" style="width: 840px; height: 400px"></div>
-      <div id="after" class="map"></div>
+      <div id="after" class="map"style="width: 840px; height: 400px"></div>
     </div>
 
     <!-- API key -->
