lorelle webpage and updated heatmap

--- a/assets/test.html
+++ b/assets/test.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Test Heatmap</title>
+    <title>World Data</title>
 
     <!-- side by side -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -28,21 +28,24 @@
   </head>
 
   <body>
-
+    
     <div id="map">
-      <div id="before" class="map" style="width: 840px; height: 400px"></div>
-      <div id="after" class="map"style="width: 840px; height: 400px"></div>
+      <!-- <div id="before" class="map" style="width: 840px; height: 400px"></div>
+      <div id="after" class="map"style="width: 840px; height: 400px"></div> -->
+      <div id="before" class="map"></div>
+      <div id="after" class="map"></div>
     </div>
+
+
+
+
 
     <!-- API key -->
     <script type="text/javascript" src="config.js"></script>
-
     <!-- JS -->
     <script type="text/javascript" src="heatmap.js"></script>
-
     <!-- Leaflet heatmap plugin-->
     <script type="text/javascript" src="leaflet-heat.js"></script>
-
 
   </body>
 
