--- a/assets/test.html
+++ b/assets/test.html
@@ -30,10 +30,10 @@
   <body>
     
     <div id="map">
-      <!-- <div id="before" class="map" style="width: 840px; height: 400px"></div>
-      <div id="after" class="map"style="width: 840px; height: 400px"></div> -->
-      <div id="before" class="map"></div>
-      <div id="after" class="map"></div>
+      <div id="before" class="map" style="width: 840px; height: 400px"></div>
+      <div id="after" class="map"style="width: 840px; height: 400px"></div>
+      <!-- <div id="before" class="map"></div>
+      <div id="after" class="map"></div> -->
     </div>
 
 
