--- a/world.html
+++ b/world.html
@@ -56,7 +56,7 @@
         <div class="title" style="text-align: center;">
           <!-- <h4><strong>WORLD AIR QUALITY</strong></h4> -->
           <p align="justify">
-              Restrictions on travel and the closure of businesses and major industries imposed to halt the spread of the coronavirus have resulted in unprecended reductions in air pollution around the world. Analysis of air quality data from the <a href="https://aqicn.org/data-platform/covid19/" target="_blank">World Air Quality Index project</a> has shown reductions in deadly particulate matter (PM 2.5) by 27% from January 2020 to April 2020. The pollutant, known as PM 2.5, is smaller than 2.5 micrometers in diameter and is considered dangerous as it can lodge deep into the lungs and pass into other organs and the bloodstream, causing serious health risks.
+              Restrictions on travel and the closure of businesses and major industries imposed to halt the spread of the coronavirus have resulted in unprecended reductions in air pollution around the world. Analysis of air quality data from the <a href="https://aqicn.org/data-platform/covid19/" target="_blank">World Air Quality Index project</a> has shown reductions in deadly particulate matter (PM 2.5) by 27% globally from January 2020 to April 2020. The pollutant, known as PM 2.5, is smaller than 2.5 micrometers in diameter and is considered dangerous as it can lodge deep into the lungs and pass into other organs and the bloodstream, causing serious health risks.
           </p>
         </div>
       </div>
