--- a/world.html
+++ b/world.html
@@ -56,7 +56,7 @@
         <div class="title" style="text-align: center;">
           <!-- <h4><strong>WORLD AIR QUALITY</strong></h4> -->
           <p align="justify">
-              Restrictions on travel and the closure of businesses and major industries imposed to halt the spread of the coronavirus have resulted in unprecended reductions in air pollution around the world. Analysis of air quality data from the <a href="https://aqicn.org/data-platform/covid19/" target="_blank">World Air Quality Index project</a> has shown reductions in deadly particulate matter (PM 2.5) by 27% globally from January 2020 to April 2020. The pollutant, known as PM 2.5, is smaller than 2.5 micrometers in diameter and is considered dangerous as it can lodge deep into the lungs and pass into other organs and the bloodstream, causing serious health risks.
+              Restrictions on travel and the closure of businesses and major industries imposed to halt the spread of the coronavirus have resulted in unprecended reductions in air pollution around the world. Analysis of air quality data from the <a href="https://aqicn.org/data-platform/covid19/" target="_blank">World Air Quality Index project</a> has shown reductions in deadly particulate matter (PM 2.5) by 27% globally from January 2020 to April 2020. The pollutant, known as PM 2.5, is smaller than 2.5 micrometers in diameter and is considered dangerous as it can lodge deep into the lungs and pass into other organs and the bloodstream, causing serious health risks. These particles are formed as a result of maninly human-made factors such as road vehicles, industrial emissions, forest fires and coal and natural gas-fired power plants. 
           </p>
         </div>
       </div>
@@ -84,7 +84,7 @@
   <div class="container">
     <div class="row">
         <p align="justify">
-            The heatmap above utilizes a before-after time slider to compare PM 2.5 levels in January 2020 (on the left-hand side) - when corona virus cases were not yet widespread - to PM 2.5 levels in April and early May 2020 (right-hand side). Data is from the World Air Quality Index project which provides regularly updated air quality data for about 380 major cities in the world from January until present. Analysis of air quality data is from 1 January until 2 May 2020.
+            The heatmap above utilizes a before-after time slider to compare PM 2.5 levels in January 2020 (on the left-hand side) - when coronavirus cases were not yet widespread - to PM 2.5 levels in April and early May 2020 (right-hand side) - a few weeks after the coronavirus was declared a pandemic, leading to shutdowns across the globe. Data is from the World Air Quality Index project which provides regularly updated air quality data for about 380 major cities in the world from January until present. Analysis of air quality data is from 1 January until 2 May 2020.
         </p>
       </div>
     </div>
