--- a/world.html
+++ b/world.html
@@ -154,7 +154,7 @@
   <br>
   <div class="container">
     <div class="row">
-        <p class="main text-main" align="justify">The x-axes shows the average cases of COVID-19 per continent while the y-axes measures the total number of deaths from COVID-19. Each bubble's size correlates with the number of days each part of our world has experience a case and death due such virus. As countries use stay-at-home as a way to tackle and slow the virus, some parts of the world are experiencing higher cases daily. As we see parts of the world change drastically others are maintaining numbers. </p>
+        <p class="main text-main" align="justify">The y-axis shows the average cases of COVID-19 per continent while the x-axis measures the total number of deaths from COVID-19. Each bubble's size correlates with the number of days each part of our world has experience a case and death due such virus. As countries use stay-at-home as a way to tackle and slow the virus, some parts of the world are experiencing higher cases daily. As we see parts of the world change drastically others are maintaining numbers. </p>
         <br>
         <p class="main text-main" align="justify">The data for this bubble graph is from <a href="https://ourworldindata.org/coronavirus" target="_blank">Our World in Data</a> which provides country-by-country data updated daily. Data is analyzed from January to May 2020.
         </p>
