--- a/us.html
+++ b/us.html
@@ -54,8 +54,8 @@
         <div class="row">
           <div class="col-xs-12  col-md-12">
             <div class="title" style="text-align: center;">
-              <h4><strong>US AIR QUALITY</strong></h4>
-              <p>SUMMARY SENTENCE HERE</p>
+              <h4><strong>Human Behavior</strong></h4>
+              <p>How do COVID-19 policies affect air quality in the United States?</p>
             </div>
           </div>
         </div>
@@ -65,16 +65,11 @@
         <div class="row">
           <div class="col-xs-12 col-md-12">
             <div id="section_one" style="text-align: center;">
-              <h2><strong>SECTION 1</strong></h2>
+              <h2><strong>Quarantine & PM 2.5</strong></h2>
+              <div class='tableauPlaceholder' id='viz1588890238825' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;Pollution3&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;Pollution3&#47;Dashboard1?:embed=y&amp;:display_count=y&amp;publish=yes' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Po&#47;Pollution3&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>        <script type='text/javascript'>          var divElement = document.getElementById('viz1588890238825');          var vizElement = divElement.getElementsByTagName('object')[0];          if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1427px';}           var scriptElement = document.createElement('script');          scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';          vizElement.parentNode.insertBefore(scriptElement, vizElement);        </script>
             </div>
           </div>
         </div>
-      </div>
-      <style>
-        .section_one-container {
-          height: 500px
-        }
-      </style>
       <br>
       <div class="container">
         <div class="row">
@@ -88,7 +83,12 @@
         <div class="row">
           <div class="col-xs-12 col-md-12">
             <div style="text-align: center;">
-              <h2><strong>SECTION 2</strong></h2>
+              <h2><strong>Social Distancing & Air Quality Index</strong></h2>
+              <img src="/assets/site_images/Overview.jpg">
+              <div class="card-body">
+                <h5 class="card-title">Air Quality and Mobility</h5>
+                <p class="card-text">As social distancing measures are set in place, we investigated whether there was a relationship between changes in mobility to/from specific locations and air quality. The mobility data was pulled from Google.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -99,6 +99,52 @@
           <br>
           <div class="col-md-12">
             <div id="section_two" style="text-align: justify;"></div>
+            <div class="card-group">
+                <div class="card">
+                  <img src="/assets/site_images/ChangeInRR2.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">RETAIL</h5>
+                    <p class="card-text">The relationship between change in movement to/from retail & recreation and change in air quality.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="/assets/site_images/ChangeInGrocPharm3.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">GROCERY & PHARMACY</h5>
+                    <p class="card-text">The relationship between change in movement to/from the grocery store & pharmacy and change in air quality.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="/assets/site_images/ChangeInParks4.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">PARKS</h5>
+                    <p class="card-text">The relationship between change in movement to/from parks and change in air quality.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-group">
+                <div class="card">
+                  <img src="/assets/site_images/ChangeInTransit5.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">TRANSIT</h5>
+                    <p class="card-text">The relationship between change in movement to/from transit stations and change in air quality.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="/assets/site_images/ChangeInWork6.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">WORK</h5>
+                    <p class="card-text">The relationship between change in movement to/from work and change in air quality.</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="/assets/site_images/ChangeInHome7.png" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">HOME</h5>
+                    <p class="card-text">The relationship between change in movement to/from home and change in air quality.</p>
+                  </div>
+                </div>
+              </div>
           </div>
           <br>
         </div>
@@ -107,8 +153,19 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div id="sec_two_space" style="width:100%; height: 400px;"></div>
-          </div>
+            <div class="card mb-3" style="text-align: center">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img src="/assets/site_images/8.png" class="card-img">
+                  </div>
+                  <div class="col-md-8">
+                  <div class="card-body">
+                      <p class="card-text">The plotting of residuals for training and test datasets shows the data is scattered randomly around zero, affirming the parameters.</p>
+                  </div>
+                </div>
+                </div>
+              </div>
+         </div>
           <br>
           <hr>
           <br>
@@ -132,6 +189,5 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-    <script type="text/javascript" src="/assets/config.js"></script>
   </body>
 </html>
