--- a/world.html
+++ b/world.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/style2.css">
+  <link rel="stylesheet" href="/assets/css/style3.css">
 </head>
 
 <body>
@@ -54,8 +55,9 @@
     <div class="row">
       <div class="col-xs-12  col-md-12">
         <div class="title" style="text-align: center;">
-          <h4><strong>WORLD AIR QUALITY: BEFORE & AFTER THE COVID-19 PANDEMIC</strong></h4>
-          <p>SUMMARY SENTENCE HERE </p>
+          <p align="justify">
+              Restrictions on travel and the closure of businesses and major industries imposed to halt the spread of the coronavirus have resulted in unprecended reductions in air pollution around the world. Analysis of air quality data from the <a href="https://aqicn.org/data-platform/covid19/" target="_blank">World Air Quality Index project</a> has shown reductions in deadly particulate matter (PM 2.5) by 27% globally from January 2020 to April 2020. The pollutant, known as PM 2.5, is smaller than 2.5 micrometers in diameter and is considered dangerous as it can lodge deep into the lungs and pass into other organs and the bloodstream, causing serious health risks. These particles are formed as a result of maninly human-made factors such as road vehicles, industrial emissions, forest fires and coal and natural gas-fired power plants. 
+          </p>
         </div>
       </div>
     </div>
@@ -65,7 +67,11 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div id="section_one" style="text-align: center;">
-          <h2><strong>SECTION 1</strong></h2>
+          <h2><strong>AIR QUALITY: BEFORE & AFTER THE COVID-19 PANDEMIC</strong></h2>
+          <div id="section_one">
+              <!-- <iframe src="http://0.0.0.0:8000/assets/test.html" width="845px" height="405px" id="heatmap"></iframe> -->
+              <iframe src="/assets/test.html" width="845px" height="405px" id="heatmap"></iframe>
+          </div>
         </div>
       </div>
     </div>
@@ -78,8 +84,9 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 section_one-container">
-        <div id="section_one"></div>
+        <p align="justify">
+            The heatmap above utilizes a before-after time slider to compare PM 2.5 levels in January 2020 (on the left-hand side) - when coronavirus cases were not yet widespread - to PM 2.5 levels in April and early May 2020 (right-hand side) - a few weeks after the coronavirus was declared a pandemic, leading to shutdowns across the globe. Data is from the World Air Quality Index project which provides regularly updated air quality data for about 380 major cities in the world from January until present. Analysis of air quality data is from 1 January until 2 May 2020.
+        </p>
       </div>
     </div>
   </div>
@@ -88,7 +95,10 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div style="text-align: center;">
-          <h2><strong>SECTION 2</strong></h2>
+          <h2><strong>AIR QUALITY OVER TIME: MAJOR WORLD CITIES</strong></h2>
+          <div id="section_two">
+              <iframe src="https://wwairchart.herokuapp.com/" width="900px" height="475px"></iframe>
+          </div>
         </div>
       </div>
     </div>
@@ -97,23 +107,61 @@
   <div class="container">
     <div class="row">
       <br>
-      <div class="col-md-12">
-        <div id="section_two" style="text-align: justify;"></div>
-      </div>
+        <p align="justify">
+            The above Plotly.py Dash interactive chart deployed as an Heroku app shows January to current data for nine major world cities affected by COVID-19, all implementing varying levels of lockdown. Overall, there was a clear downward trend of PM2.5 levels between January and May. Below shows future forecast of PM2.5 levels for four cities derived from Machine Learning analysis in AWS Forecast. These forecasts indicate that some cities should expect a further decline in PM2.5 levels, while others at the bottom of their decline are starting to rise or remain at current levels.
+        </p>
       <br>
+    </div>
+    <div class="row">
+            <div class=“card”>
+              <img src="/assets/img/London.PNG" class="card-img-top" alt="London">
+              <div class="card-body">
+                <h5 class="card-title"> <br> </h5>
+              </div>
+            </div> 
+        <div class="card">
+            <img src="/assets/img/Santiago.PNG" class="card-img-top" alt="Santiago">
+            <div class="card-body">
+              <h5 class="card-title"> <br> </h5>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/assets/img/Florence.PNG" class="card-img-top" alt="Florence">
+            <div class="card-body">
+              <h5 class="card-title"> <br> </h5>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/assets/img/Beijing.PNG" class="card-img-top" alt="Beijing">
+            <div class="card-body">
+              <h5 class="card-title"> <br> </h5>
+            </div>
+        </div>
+    </div>
+  </div>
+<br>
+  <div class="header">
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        <div style="text-align: center;">
+          <h2><strong>COVID-19: Positive Cases vs. Deaths</strong></h2>
+          <section>
+              <img id="section_two" src="/assets/img/globalbubblegraph.PNG" alt="global covid deaths and cases">
+          </section>
+        </div>
+      </div>
     </div>
   </div>
   <br>
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <div id="sec_two_space" style="width:100%; height: 400px;"></div>
-      </div>
-      <br>
-      <hr>
-      <br>
+        <p class="main text-main" align="justify">The y-axis shows the average cases of COVID-19 per continent while the x-axis measures the total number of deaths from COVID-19. Each bubble's size correlates with the number of days each part of our world has experience a case and death due such virus. As countries use stay-at-home as a way to tackle and slow the virus, some parts of the world are experiencing higher cases daily. As we see parts of the world change drastically others are maintaining numbers. </p>
+        <br>
+        <p class="main text-main" align="justify">The data for this bubble graph is from <a href="https://ourworldindata.org/coronavirus" target="_blank">Our World in Data</a> which provides country-by-country data updated daily. Data is analyzed from January to May 2020.
+        </p>
     </div>
   </div>
+  <br>
   <br>
   <br>
   <hr>
