--- a/us.html
+++ b/us.html
@@ -55,7 +55,7 @@
           <div class="col-xs-12  col-md-12">
             <div class="title" style="text-align: center;">
               <h4><strong>Human Behavior</strong></h4>
-              <p>How do COVID-19 policies affect air quality in the United States?</p>
+              <p>How do COVID-19 quarantine policies affect air quality in the United States?</p>
             </div>
           </div>
         </div>
